--- a/flickr-api-gatsby/package.json
+++ b/flickr-api-gatsby/package.json
@@ -5,8 +5,10 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@material-ui/core": "^4.8.3",
     "@material-ui/styles": "^4.8.2",
     "babel-plugin-styled-components": "^1.10.6",
+    "embla-carousel-react": "^1.2.10",
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-manifest": "^2.2.31",
@@ -16,6 +18,7 @@
     "gatsby-plugin-sharp": "^2.3.5",
     "gatsby-plugin-styled-components": "^3.1.17",
     "gatsby-source-filesystem": "^2.1.40",
+    "gatsby-theme-material-ui": "^1.0.6",
     "gatsby-transformer-sharp": "^2.3.7",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
