--- a/flickr-api-gatsby/package.json
+++ b/flickr-api-gatsby/package.json
@@ -5,9 +5,14 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@brainhubeu/react-carousel": "^1.10.34",
     "@material-ui/core": "^4.8.3",
     "@material-ui/styles": "^4.8.2",
+    "apollo-boost": "^0.4.7",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link-rest": "^0.7.3",
     "babel-plugin-styled-components": "^1.10.6",
     "embla-carousel-react": "^1.2.10",
     "gatsby": "^2.18.12",
@@ -22,8 +27,12 @@
     "gatsby-source-filesystem": "^2.1.40",
     "gatsby-theme-material-ui": "^1.0.6",
     "gatsby-transformer-sharp": "^2.3.7",
+    "graphql-anywhere": "^4.2.6",
+    "graphql-tag": "^2.10.1",
+    "isomorphic-fetch": "^2.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "styled-components": "^5.0.0"
