--- a/flickr-api-gatsby/package.json
+++ b/flickr-api-gatsby/package.json
@@ -7,6 +7,9 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@brainhubeu/react-carousel": "^1.10.34",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "@material-ui/core": "^4.8.3",
     "@material-ui/styles": "^4.8.2",
     "apollo-boost": "^0.4.7",
