--- a/flickr-api-gatsby/package.json
+++ b/flickr-api-gatsby/package.json
@@ -38,6 +38,7 @@
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-lazy-load-image-component": "^1.4.0",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
