--- a/unsplash-api-gatsby/package.json
+++ b/unsplash-api-gatsby/package.json
@@ -14,6 +14,7 @@
     "@material-ui/styles": "^4.8.2",
     "apollo-boost": "^0.4.7",
     "apollo-cache-inmemory": "^1.6.5",
+    "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.6.8",
     "apollo-link-rest": "^0.7.3",
     "babel-plugin-styled-components": "^1.10.6",
