--- a/unsplash-api-gatsby/package.json
+++ b/unsplash-api-gatsby/package.json
@@ -41,7 +41,8 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-lazy-load-image-component": "^1.4.0",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.0.0",
+    "yup": "^0.28.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
