--- a/unsplash-api-gatsby/package.json
+++ b/unsplash-api-gatsby/package.json
@@ -17,6 +17,7 @@
     "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.6.8",
     "apollo-link-rest": "^0.7.3",
+    "auth0-js": "^9.12.2",
     "babel-plugin-styled-components": "^1.10.6",
     "embla-carousel-react": "^1.2.10",
     "formik": "^2.1.2",
