--- a/unsplash-api-gatsby/package.json
+++ b/unsplash-api-gatsby/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-lazy-load-image-component": "^1.4.0",
+    "react-scroll": "^1.7.16",
     "styled-components": "^5.0.0",
     "yup": "^0.28.0"
   },
