--- a/unsplash-api-gatsby/package.json
+++ b/unsplash-api-gatsby/package.json
@@ -21,6 +21,7 @@
     "auth0-js": "^9.12.2",
     "babel-plugin-styled-components": "^1.10.6",
     "embla-carousel-react": "^1.2.10",
+    "firebase": "^7.8.2",
     "formik": "^2.1.2",
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.34",
