--- a/unsplash-api-gatsby/package.json
+++ b/unsplash-api-gatsby/package.json
@@ -24,6 +24,7 @@
     "firebase": "^7.8.2",
     "formik": "^2.1.2",
     "gatsby": "^2.18.12",
+    "gatsby-cli": "^2.8.30",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-manifest": "^2.2.31",
     "gatsby-plugin-material-ui": "^2.1.6",
